# CHPS0941_Projet

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindOptiX.cmake
common/: CUDABuffer.h  LaunchParams.h  Scene.hpp  camera.h  image.h  main.cpp  meshloader.cpp  optix7.h  optixRender.cpp  optixRender.h  screenDisplay.cpp  screenDisplay.h
data/lut/: binary2.lut  binary255.lut  binary3.lut  binary4.lut  cardiac.lut  contour.lut  cool.lut  fusion.lut  hot-metal.lut  hot-metal2.lut  ice.lut  inverse.lut  jet.lut  rainbow1.lut  rainbow2.lut  rainbow3.lut  smart.lut  suv1.lut  suv2.lut  suv3.lut  ten-bands.lut  thermal.lut  warm.lut
libs/assimp/lib/: assimp-vc142-mt.lib  zlibstatic.lib
libs/assimp/lib/cmake/assimp-5.1/: assimpTargets.cmake
libs/assimp/lib/pkgconfig/: assimp.pc
libs/glew-2.1.0/: glew.pc
render/: CheckerboardTexture.cpp  CheckerboardTexture.h  Gui.cpp  Gui.h  Lut.cpp  Lut.h  RenderingType.cpp  RenderingType.h  RenderingTypeOption.h  Shader.h  TextureCuda.cu  TextureCuda.h  helper_cuda.h  helper_math.h  ip.h
render/gui/: Gui.cpp  Gui.h  LutDirectoryScanner.cpp  LutDirectoryScanner.h
render/ip/: AIP.h  DEMIP.h  DepthOnly.h  ExampleIP.h  IP.h  LMIP.h  MIDA.h  MIP.h  MinIP.h  VoxelHitData.h
samples/1_meshVisualization/: CMakeLists.txt  main.cpp  optixRender.cpp  optixRender.h
samples/2_volumeVisualization/: CMakeLists.txt  main.cpp  optixRender.cpp  optixRender.h
shader/: CMakeLists.txt  devicePrograms.cu  mesh.cu  raygen.cu  volume.cu
src/: LaunchParams.h  Scene.cpp  Scene.hpp  camera.h  image.cpp  main.cpp  optixRender.cpp  optixRender.h  screenDisplay.cpp  screenDisplay.h  trianglemesh.cpp  trianglemesh.h  vec.h  volume.cpp  volume.h
